--- a/src/main/webapp/WEB-INF/views/people/show.html
+++ b/src/main/webapp/WEB-INF/views/people/show.html
@@ -5,12 +5,18 @@
   <title>Show</title>
 </head>
 <body>
-<p th:text="${person.getName() + ', ' + person.getAge()}">VALUE</p>
-<p th:text="${'Email: ' + person.getEmail()}">VALUE</p>
-<p th:text="${person.getId()}">VALUE</p>
+<p th:text="${person.getFullName() + ', ' + person.getYearOfBirth()}">VALUE</p>
+<div th:if="${not #lists.isEmpty(person.getBookList())}">
+  <hr/>
+  <b>Книги:</b>
+  <div th:each="book : ${person.getBookList()}">
+    <p th:text="${book.getName() + ', ' + book.getYear()}">bookInfo</p>
+  </div>
+</div>
+<p th:if="${#lists.isEmpty(person.getBookList())}">Человек пока не взял ни одной книги</p>
+<hr/>
 
-<a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
-
+<a th:href="@{/people/{id}/edit(id=${person.getId()})}">Редактировать</a>
 <form th:method="DELETE" th:action="@{/people/{id}(id=${person.getId()})}">
   <input type="submit" value="Delete"/>
 </form>
